Revert "First few Translations for spanish"
This reverts commit edc55c02eb4e52ac083c3e07fa1c16203cbe8d5e.

--- a/bundle/template/es-ES.tpl_jd_boston.ini
+++ b/bundle/template/es-ES.tpl_jd_boston.ini
@@ -1,31 +1,31 @@
 #Common#
-HELIX_YES="Sí"
+HELIX_YES="Yes"
 HELIX_NO="No"
-HELIX_SHOW="Espectáculo"
-HELIX_HIDE="Esconder"
+HELIX_SHOW="Show"
+HELIX_HIDE="Hide"
 
 #Basic Tab#
-JDETAILS="<i class='fa fa-home'></i>Básico"
+JDETAILS="<i class='fa fa-home'></i>Basic"
 
 HELIX_GLOBAL="Global"
-HELIX_PRELOADER="Precargador"
-HELIX_PRELOADER_DESC="Sí para habilitar Precargador"
-HELIX_PRELOADER_ANIMATION="Precargador Animación"
-HELIX_PRELOADER_ANIMATION_DESC="Seleccione una Precargador animación de la lista"
-HELIX_PRELOADER_ANIMATION_CIRCLE="Circulo"
-HELIX_PRELOADER_ANIMATION_DOUBLE_LOOP="Doble circuito"
-HELIX_PRELOADER_ANIMATION_RING="anillo"
+HELIX_PRELOADER="Preloader"
+HELIX_PRELOADER_DESC="Yes to enable preloader"
+HELIX_PRELOADER_ANIMATION="Preloader Animation"
+HELIX_PRELOADER_ANIMATION_DESC="Select a preloader animation from the list"
+HELIX_PRELOADER_ANIMATION_CIRCLE="Circle"
+HELIX_PRELOADER_ANIMATION_DOUBLE_LOOP="Double Loop"
+HELIX_PRELOADER_ANIMATION_RING="Ring"
 HELIX_PRELOADER_ANIMATION_AUDIO_WAVE="Audio Wave"
-HELIX_PRELOADER_ANIMATION_WAVE_TWO="Wave Dos"
-HELIX_PRELOADER_ANIMATION_CIRCLE_TWO="Circulo Dos"
-HELIX_PRELOADER_ANIMATION_MOON="Luna"
-HELIX_PRELOADER_ANIMATION_CLOCK="Reloj"
+HELIX_PRELOADER_ANIMATION_WAVE_TWO="Wave Two"
+HELIX_PRELOADER_ANIMATION_CIRCLE_TWO="Circle Two"
+HELIX_PRELOADER_ANIMATION_MOON="Moon"
+HELIX_PRELOADER_ANIMATION_CLOCK="Clock"
 HELIX_PRELOADER_ANIMATION_LOGO="Logo"
 
-HELIX_PRELOADER_BG_COLOR="Precargador Fondo color"
-HELIX_PRELOADER_BG_COLOR_DESC="Seleccione una Fondo color for Precargador"
-HELIX_PRELOADER_TX_COLOR="Precargador Texto Color"
-HELIX_PRELOADER_TX_COLOR_DESC="Seleccione una texto color for Precargador"
+HELIX_PRELOADER_BG_COLOR="Preloader Background color"
+HELIX_PRELOADER_BG_COLOR_DESC="Select a background color for preloader"
+HELIX_PRELOADER_TX_COLOR="Preloader Text Color"
+HELIX_PRELOADER_TX_COLOR_DESC="Select a text color for preloader"
 
 HELIX_GOTO_TOP="Go To Top"
 HELIX_GO_TOP_DESC="Yes to show go to top when scroll in bottom"
